# NexusDownloadFlow

./: .gitignore  README.md  build.bat  build.spec  issue.txt  main.py  pyproject.toml  requirements.txt
_global/constants/: messages.py
assets/issue/: issue.template
config/: application_properties.py  ascii_art.py  config.toml  definitions.py  ndf_logging.py
documentation/operating/: Operating Documentation - NexusDownloadFlow.md
documentation/technical/: index.md  main.md  scripts.cli.add_templates.md  scripts.cli.clear_logs.md  scripts.cli.commands.md  scripts.cli.issue.md  scripts.cli.remove_templates.md  scripts.cli.run.md  scripts.cli.run_mode_enum.md  scripts.cli.version.md
scripts/: ndf_params.py  ndf_run.py
scripts/cli/: commands.py
scripts/cli/add_template/: add_templates.py
scripts/cli/add_templates/: add_templates.py
scripts/cli/clear_logs/: clear_logs.py
scripts/cli/issue/: issue.py
scripts/cli/remove_template/: remove_template.py
scripts/cli/remove_templates/: remove_templates.py
scripts/cli/run/: run.py  run_mode_enum.py
scripts/cli/version/: version.py
scripts/errors/: error_messages.py
src/app/AI/: NexusFlowAI.py
test/demo/: ndf_1.0.0_template_matching_demo.py  ndf_2.0.0-snapshot_template_matching_demo.py  ndf_2.0.0_template_matching_demo.py
